Modulo tipo de gasto Cambios en el swagger
